--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,7 @@ dependencies = [
     "termcolor>=3.1.0",
     "tqdm>=4.67.1",
 ]
+
+
+[project.scripts]
+"threader-wsgi" = "threaderwsgi:_main_function"
