--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "threaderwsgi"
-version = "0.1.0"
+version = "0.0.1.dev0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
@@ -14,4 +14,4 @@ dependencies = [
 
 
 [project.scripts]
-"threader-wsgi" = "threaderwsgi.main:typer_app"
+"threader-wsgi" = "threaderwsgi.main:app"
