🔧 *refatorar: renomear projeto de ThreaderWSGI para AetherWSGI e reorganizar estrutura de arquivos*
Este commit renomeia o projeto de "ThreaderWSGI" para "AetherWSGI", atualizando referências em diversos arquivos e reorganizando a estrutura do código.

Arquivos Alterados:
- *README.md*: Atualiza o título do projeto para AetherWSGI.
- *pyproject.toml*: Renomeia o projeto e ajusta o script de entrada.
- *main.py*: Modifica a mensagem de saída para "Hello from aether!".
- *aether/__init__.py*: Cria o arquivo de inicialização para o pacote Aether.
- *aether/__main__.py*: Cria o ponto de entrada principal para o pacote Aether.
- *aether/_processpoolwsgi.py*: Adiciona a implementação do servidor WSGI baseado em ProcessPool.
- *aether/_threadpoolwsgi.py*: Adiciona a implementação do servidor WSGI baseado em ThreadPool.
- *aether/_requesthandlerwsgi.py*: Cria o manipulador de requisições WSGI.
- *aether/_types.py*: Adiciona tipos para Host e Port, além de um tipo para endereço do servidor.
- *threaderwsgi/__main__.py*: Remove o arquivo antigo de ponto de entrada.
- *uv.lock*: Atualiza o nome do pacote para Aether.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "threaderwsgi"
+name = "aether"
 version = "0.0.1.dev0"
 description = "Add your description here"
 readme = "README.md"
@@ -14,4 +14,4 @@ dependencies = [
 
 
 [project.scripts]
-"threader-wsgi" = "threaderwsgi.main:th"
+"at" = "aether.main:at"
